# regime-detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml  refresh.yml
data/backtests/: equity_latest.parquet  summary_latest.json
data/models/: meanrev_regimes.json  regime_multipliers.json
data/models/hmm/: fit.pkl  labels.parquet  proba.parquet
data/models/lgbm/: best_params.json  metadata.json  model.txt  proba.parquet
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: mart_features.sql  mart_macro_features.sql  schema.yml
dbt/models/staging/: _sources.yml  schema.yml  stg_macro.sql  stg_prices.sql
dbt/tests/: freshness_warehouse.sql
docs/: research_memo.md
docs/adr/: 0001-dbt-vs-polars-redundancy.md
notebooks/: 01_eda.ipynb
scripts/: build_docs.sh  clean_warehouse_for_shipping.py  refresh_proba_files.py  run_pipeline.py
src/regime/: __init__.py  cli.py  config.py  logging.py  warehouse.py
src/regime/api/: live.py  main.py  sample.py
src/regime/app/: streamlit_app.py
src/regime/app/pages/: 1_Live_Regime.py  2_Backtest_Replay.py  2_Regime_Implications.py  3_Backtest_Replay.py  4_Research.py  5_About.py
src/regime/backtest/: cli.py  costs.py  engine.py  regime_multipliers.py  strategies.py
src/regime/implications/: __init__.py  models.py  policy.py  service.py  stats.py
src/regime/ingestion/: cli.py  contracts.py  fred_flow.py  storage.py  yfinance_flow.py
src/regime/models/: hmm_regime.py  lightgbm_regime.py  registry.py  train.py
src/regime/monitoring/: drift.py
src/regime/transform/: features.py  targets.py
tests/: conftest.py
tests/unit/: test_api.py  test_backtest.py  test_contracts.py  test_hmm_regime.py  test_implications.py  test_look_ahead_bias.py  test_storage.py  test_warehouse.py  test_yfinance_flow.py
web/: DEPLOY.md  api-client.js  api.html  app.js  backtest.html  config.js  implications.html  index.html  nav.js  regime.html  sample_data.js  styles.css
