[project]
name = "regime-detection"
version = "0.1.0"
description = "Adaptive Market Regime Detection & Backtesting Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Nirmit Sachde" }]

dependencies = [
  # Core data
  "polars>=1.18",
  "pandas>=2.2",
  "pyarrow>=18",
  "numpy>=2.0",
  "duckdb>=1.1",
  # Ingestion
  "yfinance>=0.2.50",
  "fredapi>=0.5.2",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.3",
  # Orchestration
  "prefect>=3.1",
  # Modeling
  "scikit-learn>=1.5",
  "hmmlearn>=0.3.2",
  "lightgbm>=4.5",
  "shap>=0.46",
  # Tracking
  "mlflow>=2.18",
  # Backtest
  "vectorbt>=0.26",
  # App
  "streamlit>=1.40",
  "plotly>=5.24",
  # Config / logging
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "rich>=13.9",
  "tenacity>=9.0",
  "typer>=0.13",
  # Transformation
  "dbt-core>=1.8",
  "dbt-duckdb>=1.8",
  # API surface
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "httpx>=0.27",          # for FastAPI TestClient
  "pre-commit>=4.0",
  "ipykernel>=6.29",
  "jupyter>=1.1",
  "pandas-stubs>=2.2",
  "types-requests>=2.32",
]
docs = [
  "pdoc>=15.0",
]

[project.scripts]
regime = "regime.cli:app"
regime-ingest = "regime.ingestion.cli:app"
regime-train = "regime.models.train:app"
regime-backtest = "regime.backtest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regime"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["notebooks", "dbt/target", "data"]

[tool.ruff.lint]
select = [
  "E", "W",      # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "B",           # bugbear
  "UP",          # pyupgrade
  "C4",          # comprehensions
  "SIM",         # simplify
  "PL",          # pylint
  "RUF",         # ruff-specific
  "TCH",         # type-checking
  "ASYNC",
]
ignore = [
  "PLR0913",     # too many args
  "PLR2004",     # magic value
  "E501",        # line length (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
"notebooks/**" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
files = ["src"]
exclude = ["^(notebooks|dbt|data|tests)/"]

[[tool.mypy.overrides]]
module = [
  "yfinance.*",
  "fredapi.*",
  "hmmlearn.*",
  "lightgbm.*",
  "vectorbt.*",
  "mlflow.*",
  "shap.*",
  "duckdb.*",
  "plotly.*",
]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=src/regime",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=80",
]
testpaths = ["tests"]
markers = [
  "integration: tests that hit external services or the warehouse",
  "slow: tests that take >5s",
]

[tool.coverage.run]
branch = true
source = ["src/regime"]
omit = ["src/regime/app/*", "src/regime/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
