[project]
name = "regime-detection"
version = "0.1.0"
description = "Adaptive Market Regime Detection & Backtesting Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Nirmit Sachde" }]

dependencies = [
  # Core data
  "polars>=1.18",
  "pandas>=2.2",
  "pyarrow>=18",
  "numpy>=2.0",
  "duckdb>=1.1",
  # Ingestion
  "yfinance>=0.2.50",
  "fredapi>=0.5.2",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.3",
  # Orchestration
  "prefect>=3.1",
  # Modeling
  "scikit-learn>=1.5",
  "hmmlearn>=0.3.2",
  "lightgbm>=4.5",
  "shap>=0.46",
  # Tracking
  "mlflow>=2.18",
  # Backtest
  "vectorbt>=0.26",
  # App
  "streamlit>=1.40",
  "plotly>=5.24",
  # Config / logging
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "structlog>=24.4",
  "rich>=13.9",
  "tenacity>=9.0",
  "typer>=0.13",
  # Transformation
  "dbt-core>=1.8",
  "dbt-duckdb>=1.8",
  # API surface
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "httpx>=0.27",          # for FastAPI TestClient
  "pre-commit>=4.0",
  "ipykernel>=6.29",
  "jupyter>=1.1",
  "pandas-stubs>=2.2",
  "types-requests>=2.32",
]
docs = [
  "pdoc>=15.0",
]

[project.scripts]
regime = "regime.cli:app"
regime-ingest = "regime.ingestion.cli:app"
regime-train = "regime.models.train:app"
regime-backtest = "regime.backtest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regime"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["notebooks", "dbt/target", "data"]

[tool.ruff.lint]
select = [
  "E", "W",      # pycodestyle
  "F",           # pyflakes
  "I",           # isort
  "B",           # bugbear
  "UP",          # pyupgrade
  "C4",          # comprehensions
  "SIM",         # simplify
  "PL",          # pylint
  "RUF",         # ruff-specific
  "TCH",         # type-checking
  "ASYNC",
]
ignore = [
  "PLR0913",     # too many args
  "PLR0911",     # too many return statements (dispatcher patterns)
  "PLR2004",     # magic value
  "E501",        # line length (formatter handles)
  "PLC0415",     # import not at top-level (we use lazy imports deliberately)
  "TC002",       # third-party import in type-checking block
  "TC003",       # stdlib import in type-checking block
  "TC006",       # cast string literal
  "UP037",       # string annotations — noisy when mixed with forward refs
  "RUF001",     # ambiguous unicode chars (× is intentional in stats labels)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PLC0415"]
"notebooks/**" = ["E402", "F401"]
"scripts/**" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
files = ["src/regime"]
exclude = ["^(notebooks|dbt|data|tests)/"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "yfinance.*",
  "fredapi.*",
  "hmmlearn.*",
  "lightgbm.*",
  "vectorbt.*",
  "mlflow.*",
  "shap.*",
  "duckdb.*",
  "plotly.*",
  "polars.*",
  "sklearn.*",
  "prefect.*",
  "streamlit.*",
  "structlog.*",
  "tenacity.*",
  "typer.*",
  "rich.*",
  "fastapi.*",
  "uvicorn.*",
  "pyarrow.*",
]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=src/regime",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-fail-under=80",
]
testpaths = ["tests"]
markers = [
  "integration: tests that hit external services or the warehouse",
  "slow: tests that take >5s",
]

[tool.coverage.run]
branch = true
source = ["src/regime"]
omit = [
  # Streamlit pages — UI-only, exercised manually
  "src/regime/app/*",
  "src/regime/__main__.py",
  # Network-bound Prefect flows + thin Typer CLI wrappers — covered by
  # integration tests, not unit tests
  "src/regime/ingestion/cli.py",
  "src/regime/ingestion/fred_flow.py",
  "src/regime/ingestion/yfinance_flow.py",
  "src/regime/backtest/cli.py",
  # Require live warehouse + MLflow tracking server
  "src/regime/models/train.py",
  "src/regime/models/registry.py",
  "src/regime/models/lightgbm_regime.py",
  # Full-pipeline-dependent
  "src/regime/monitoring/drift.py",
  "src/regime/backtest/engine.py",
  # Small helper covered by integration tests
  "src/regime/transform/targets.py",
  # Top-level CLI dispatcher
  "src/regime/cli.py",
  "src/regime/warehouse.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
